--- a/index.html
+++ b/index.html
@@ -3,20 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <!-- Site branding -->
+    <title>Doudou Compagnie</title>
+    <meta name="description" content="Doudou Compagnie — product catalog, collections and gift ideas." />
+    <meta name="author" content="Doudou Compagnie" />
+
+    <!-- Open Graph (WhatsApp / iMessage / Facebook / LinkedIn) -->
+    <meta property="og:title" content="Doudou Compagnie" />
+    <meta property="og:description" content="Product catalog, collections and gift ideas." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://ionharuta.github.io/doudou-compagnie-website-builder/" />
+    <meta property="og:image" content="https://ionharuta.github.io/doudou-compagnie-website-builder/og-image.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Doudou Compagnie" />
+    <meta name="twitter:description" content="Product catalog, collections and gift ideas." />
+    <meta name="twitter:image" content="https://ionharuta.github.io/doudou-compagnie-website-builder/og-image.png" />
   </head>
 
   <body>
