Add GitHub Pages SPA routing support (404.html) and hide admin panel from navbar

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,6 +27,29 @@
 
   <body>
     <div id="root"></div>
+    <!-- Redirect for GitHub Pages SPA routing -->
+    <script>
+      // Single Page Apps for GitHub Pages
+      // https://github.com/rafgraph/spa-github-pages
+      (function() {
+        var pathSegmentsToKeep = 1;
+        var l = window.location;
+        var redirect = sessionStorage.redirect;
+        delete sessionStorage.redirect;
+        if (redirect && redirect != l.href) {
+          history.replaceState(null, null, redirect);
+        }
+        // Handle redirect from 404.html
+        if (l.search[1] === '/' ) {
+          var decoded = l.search.slice(1).split('&').map(function(s) { 
+            return s.replace(/~and~/g, '&')
+          }).join('?');
+          window.history.replaceState(null, null,
+            l.pathname.slice(0, -1) + decoded + l.hash
+          );
+        }
+      })();
+    </script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
