--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,21 +8,21 @@
     <title>Doudou Compagnie</title>
     <meta name="description" content="Doudou Compagnie — product catalog, collections and gift ideas." />
     <meta name="author" content="Doudou Compagnie" />
+    <meta name="robots" content="index, follow" />
 
     <!-- Open Graph (WhatsApp / iMessage / Facebook / LinkedIn) -->
     <meta property="og:title" content="Doudou Compagnie" />
-    <meta property="og:description" content="Product catalog, collections and gift ideas." />
+    <meta property="og:description" content="Doudou Compagnie — product catalog, collections and gift ideas." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://ionharuta.github.io/doudou-compagnie-website-builder/" />
-    <meta property="og:image" content="https://ionharuta.github.io/doudou-compagnie-website-builder/og-image.png" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
+    <meta property="og:site_name" content="Doudou Compagnie" />
+    <!-- Removed og:image to prevent preview cards - will show as simple link -->
 
     <!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Doudou Compagnie" />
-    <meta name="twitter:description" content="Product catalog, collections and gift ideas." />
-    <meta name="twitter:image" content="https://ionharuta.github.io/doudou-compagnie-website-builder/og-image.png" />
+    <meta name="twitter:description" content="Doudou Compagnie — product catalog, collections and gift ideas." />
+    <!-- Removed twitter:image to prevent preview cards - will show as simple link -->
   </head>
 
   <body>
