--- a/frontend/public/404.html
+++ b/frontend/public/404.html
@@ -3,6 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Doudou Compagnie</title>
+    <meta name="description" content="Doudou Compagnie — product catalog, collections and gift ideas." />
+    <meta name="robots" content="noindex, nofollow" />
+    <!-- Open Graph -->
+    <meta property="og:title" content="Doudou Compagnie" />
+    <meta property="og:description" content="Doudou Compagnie — product catalog, collections and gift ideas." />
+    <meta property="og:type" content="website" />
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Doudou Compagnie" />
+    <meta name="twitter:description" content="Doudou Compagnie — product catalog, collections and gift ideas." />
     <script>
       // Single Page Apps for GitHub Pages
       // https://github.com/rafgraph/spa-github-pages
