Improve social media crawler detection and add cache refresh guide

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,6 +16,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://ionharuta.github.io/doudou-compagnie-website-builder/" />
     <meta property="og:site_name" content="Doudou Compagnie" />
+    <meta property="og:locale" content="ro_RO" />
     <!-- Removed og:image to prevent preview cards - will show as simple link -->
 
     <!-- Twitter -->
