--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,10 @@
     <meta name="description" content="Doudou Compagnie — product catalog, collections and gift ideas." />
     <meta name="author" content="Doudou Compagnie" />
     <meta name="robots" content="index, follow" />
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="/favicon.png" />
 
     <!-- Open Graph (WhatsApp / iMessage / Facebook / LinkedIn) -->
     <meta property="og:title" content="Doudou Compagnie" />
